--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-Django==4.1.1
+Django==4.1.3
 django-cors-headers==3.13.0
-numpy==1.23.3
-psycopg2==2.9.3
-sqlparse==0.4.2
-torch==1.12.1
-typing-extensions==4.3.0
+numpy==1.23.4
+psycopg2==2.9.5
+sqlparse==0.4.3
+torch==1.13.0
+typing_extensions==4.4.0
